[tool.poetry]
name = "Blog Link Extractor & Content Handler (BLECH)"
version = "0.1.0"
description = "BLECH is a tool designed to automatically identify and extract links to individual posts from a blog's main page, index, or feed. After identifying the links, it proceeds to fetch and parse the content of each blog post, making it easier to process, analyze, or archive blog data."
authors = ["jkarenko <juho.karenko@gmail.com"] # Replace with your details
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
# Core dependencies for HTTP requests and HTML parsing
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 
